# ArcherEngine

./: .gitignore  AncientArcher2.sln  ArcherEngine.sln  CMakeLists.txt  linux_build.sh  linux_run_editor.sh  readme.md  vcpkg.json
AAEditor/: AAEditor.vcxproj  AAEditor.vcxproj.filters  fly_cam_script.h  main.cpp
AAEngine/: AAEngine.vcxproj  AAEngine.vcxproj.filters
AAEngine/include/AAEngine/: Interface.h  Support.h  Version.h  WindowOptions.h
AAEngine/include/AncientArcher/: AncientArcher.h  Version.h  WindowOptions.h
AAEngine/src/: AncientArcher.cpp  AncientArcherRuntime.cpp  DefaultShaders.cpp  DefaultShaders.h  IntefaceRunetime.cpp  Interface.cpp  InterfaceRuntime.cpp
AAEngine/src/Base/: UniqueInstance.cpp
AAEngine/src/ECS/: entt.cpp  entt.h
AAEngine/src/GUI/: imGUI.cpp
AAEngine/src/Mesh/: AnimProp.cpp  AnimProp.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.h  Material.cpp  Material.h  MeshInfo.cpp  MeshInfo.h  Prop.cpp  Prop.h  Skeleton.cpp  Spacial3D.cpp  Spacial3D.h
AAEngine/src/OS/: AnimMeshLoader.cpp  AnimMeshLoader.h  LoadCube.cpp  LoadCube.h  LoadPlane.cpp  LoadPlane.h  MeshInfo.cpp  MeshInfo.h  MeshLoader.cpp  MeshLoader.h  TextureLoader.cpp  TextureLoader.h  Vertex.cpp
AAEngine/src/Physics/: NVidiaPhysx.cpp  NVidiaPhysx.h  Physics.cpp  Physics.h
AAEngine/src/Renderer/: AnimMeshLoader.cpp  AnimMeshLoader.h  AnimModelLoader.cpp  AnimModelLoader.h  MeshLoader.cpp  TextureLoader.cpp
AAEngine/src/Scene/: AnimProp.cpp  AnimProp.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Camera.cpp  Camera.h  Lights.cpp  Lights.h  Prop.cpp  Prop.h  Skeleton.h  Skybox.cpp  Skybox.h  Spacial3D.h  SunLight.cpp
AAEngine/src/Sound/: SoundDevice.cpp  SoundDevice.h  SoundEffect.h  Speaker.h
AAEngine/src/Utility/: rand.cpp
AAUnitTest/: AAUnitTest.cpp  AAUnitTest.vcxproj  AAUnitTest.vcxproj.filters  fly_cam_script.h  fpp_fly.cpp  pch.h  sun_light_script.h  test_globals.h
AAUnitTest001_DefaultInit/: AAUnitTest.cpp  AAUnitTest001_DefaultInit.vcxproj  pch.h
AAUnitTest002_WindowOptions/: AAUnitTest.cpp  AAUnitTest002_WindowOptions.vcxproj  AAUnitTest002_WindowOptions.vcxproj.filters  pch.h
AAUnitTest003_Skybox/: AAUnitTest.cpp  AAUnitTest003_Skybox.vcxproj  pch.h
AAUnitTest004_Models/: AAUnitTest.cpp  AAUnitTest004_Models.vcxproj  AAUnitTest004_Models.vcxproj.filters  pch.h
AAUnitTest005_SkeletalAnimations/: AAUnitTest.cpp  AAUnitTest005_SkeletalAnimations.vcxproj  fpp_fly.cpp  pch.cpp  pch.h
AAUnitTest006_ModelMashup/: AAUnitTest.cpp  AAUnitTest006_ModelMashup.vcxproj  fpp_fly.cpp  pch.cpp  pch.h
AAUnitTest007_SoundEffects/: AAUnitTest.cpp  AAUnitTest007_SoundEffects.vcxproj
AAUnitTest008_StencilOutline/: AAUnitTest.cpp  AAUnitTest008_StencilOutline.vcxproj  AAUnitTest008_StencilOutline.vcxproj.filters
AAUnitTest009_SequentialRun/: AAUnitTest.cpp  AAUnitTest009_SequentialRun.vcxproj  pch.h
DownloadTestResources/: DownloadTestResources.cpp  DownloadTestResources.vcxproj  DownloadTestResources.vcxproj.filters
Editor/: Editor.vcxproj  Editor.vcxproj.filters  fly_cam_script.h  main.cpp
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/include/ArcherEngine/: Interface.h  Support.h  Version.h
Engine/src/: IntefaceRunetime.cpp  Interface.cpp
Engine/src/ECS/: entt.cpp
Engine/src/GUI/: imGUI.h
Engine/src/Mesh/: AnimProp.cpp  Animation.cpp  Animation.h  AnimationData.h  Animator.cpp  Animator.h  Bone.h  Material.h  MeshInfo.cpp  MeshInfo.h  Prop.cpp  Skeleton.cpp  Skeleton.h  Spacial3D.cpp  Spacial3D.h  TextureTypes.h  Vertex.cpp  Vertex.h
Engine/src/Physics/: NVidiaPhysx.cpp  NVidiaPhysx.h
Engine/src/Scene/: Camera.cpp  Scene.cpp  Skybox.cpp  Skybox.h  SunLight.cpp
Engine/src/Sound/: SoundEffect.cpp  SoundEffect.h  SoundListener.cpp  SoundListener.h  Speaker.cpp  Speaker.h
Engine/src/Utility/: rand.cpp
ExampleECS/: ExampleECS.vcxproj  ExampleECS.vcxproj.filters  __main.cpp
ExampleProject/: ExampleProject.vcxproj  ExampleProject.vcxproj.filters  GameStates.h  Manager.h  __main.cpp
ExampleProject/characters/: FirstPersonCharacter.h  FlashLight.h  Player.h
ExampleProject/elements/: Inventory.h  Item.h  Loadout.h
ExampleProject/game/: FlashLight.h  MainCharacter.h  MainGame.h  Stats.h
ExampleProject/game/setup/: setfullscreentoggle.h  setmodels.h  setmusic.h  setskylight.h
ExampleProject/scenes/: Character.h  Intro.h  Level1.h  Menu.h
ExampleProject/setup/: setmodels.h  setmusic.h  setskylight.h
ExtendedStay/: ExtendedStay.vcxproj  ExtendedStay.vcxproj.filters  hpwell.h  run.cpp
Foundation/: CMakeLists.txt
Foundation/include/ArcherEngine/: Version.h  WindowOptions.h
Foundation/include/ArcherEngine/Scene/: Camera.h
Foundation/samples/common/scripts/: file_menu.h
Foundation/samples/editor/: CMakeLists.txt  main.cpp
Foundation/src/Base/: UniqueInstance.cpp
Foundation/src/Math/: Conversions.h
Foundation/src/Mesh/: Animator.cpp  Spacial3D.cpp
Foundation/src/OS/OpenGL/: OGLShader.h
Foundation/src/OS/OpenGL/InternalShaders/: Fog.cpp  Fog.h  Uber.cpp
Foundation/src/OS/OpenGL/Loaders/: AssimpSceneLoader.h  Cache.cpp  Cache.h  SceneLoader.cpp
Foundation/src/Scene/: Lights.h  Scene.cpp
Foundation/src/Sound/: Speaker.cpp  Speaker.h
Foundation/testsuite/: CMakeLists.txt  pch.h
Foundation/testsuite/DownloadTestResources/: DownloadTestResources.cpp
Tests/: Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters  pch.h
UnitTest/: UnitTest.cpp  UnitTest.vcxproj  UnitTest.vcxproj.filters  sun_light_script.h  test_globals.h
docs/: readme.md
examples/: CMakeLists.txt
examples/editor/: CMakeLists.txt  main.cpp
examples/fpp/: CMakeLists.txt  main.cpp
include/ArcherEngine/: Interface.h  Version.h
src/: IntefaceRunetime.cpp  Interface.cpp
src/Base/: UniqueInstance.h
src/GUI/: imGUI.cpp  imGUI.h
src/Mesh/: MeshInfo.cpp  MeshInfo.h  TextureTypes.h  Vertex.h
src/Scene/: Camera.cpp  Skybox.cpp  Skybox.h  SunLight.cpp
src/Sound/: LongSound.cpp  SoundDevice.cpp  SoundDevice.h  SoundEffect.cpp  SoundEffect.h  SoundListener.cpp
src/Utility/: FileDialog.cpp
(+90 files in other folders)
